styles.css
@import url('https://fonts.googleapis.com/css?family=Radio Canada');

:root {
  --primary-color: #00A6EF;
  --primary-color-hover: rgb(9, 161, 226);
  --primary-text-color: #FFFFFF;
  --main-color: #FFFFFF;
  --main-color-hover: #F8F8F8;
  --bg-color: #DFE8F0;
  --text-color: #000000;
  --required-text-color: #D73535;
  --off-bg-color: #EF0000;
  --off-bg-color-hover: #D71B1B;
  --on-bg-color: #1BAA03;
  --on-bg-color-hover: #20a209;
  --switch-bg-color: #d2d2d2;
  --dialog-font-color: #3d3d3d;
  --card-sub-text-color: #939393;
  --card-border-radius: 8px;
  --icon-size: 28px;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Radio Canada';
}

ul {
  list-style-type: none;
}

html, body, .container {
  height: 100%;
}

.icon {
  width: var(--icon-size);
  height: var(--icon-size);
}

.icon.edit {
  background-image: url(./svg/pencil.svg);
}

.icon.delete {
  background-image: url(./svg/delete.svg);
}

.container {
  display: grid;
  grid-template-columns: 40% 1fr;
}

.aside {
  background-color: #00A6EF;
  color: var(--primary-text-color);
  position: relative;
}

.flex-center-vertical {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.header {
  gap: 16px;
}

.header .title, .lib-button {
  text-transform: uppercase;
}

.header .title {
  font-size: 3rem;
  letter-spacing: 0.2rem;
}

.lib-button {
  background-color: var(--main-color);
  border: none;
  padding: 12px 36px;
  border-radius: 4px;
  font-weight: 600;
  font-size: 0.9rem;
  color: var(--primary-color);
  cursor: pointer;
}

.lib-button:hover {
  background-color: var(--main-color-hover);
}

.copyright {
  position: absolute;
  bottom: 0;
  margin-bottom: 32px;
  font-size: 0.8rem;
}

.main {
  background-color: var(--bg-color);
  overflow-x: hidden;
}

.cards {
  display: grid;
  padding: 40px 36px;
  gap: 18px;
}

.card {
  min-width: 0;
  min-height: 80px;
  background-color: var(--main-color);
  display: flex;
  border-radius: var(--card-border-radius);
  gap: 20px;
}

.card .content {
  min-width: 0;
  flex: 1;
  display: flex;
  padding: 8px;
  flex-direction: column;
  justify-content: center;
}

.card button {
  background-color: transparent;
  border: none;
}

.card > button {
  width: 168px;
  background-color: var(--off-bg-color);
  color: var(--primary-text-color);
  font-weight: 600;
  text-transform: uppercase;
  font-size: 1.1rem;
  border-top-left-radius: var(--card-border-radius);
  border-bottom-left-radius: var(--card-border-radius);
  cursor: pointer;
}

.card > button:hover {
  background-color: var(--off-bg-color-hover);
}

.card button.read {
  background-color: var(--on-bg-color);
}

.card > button.read:hover {
  background-color: var(--on-bg-color-hover);
}

.card .title,
.card .description {
  overflow-wrap: break-word;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.card .title {
  font-size: 1.6rem;
  font-weight: 400;
  letter-spacing: 0.04rem;
}

.card .description {
  color: var(--card-sub-text-color);
  font-size: 0.8rem;
}

.card .buttons {
  display: flex;
  align-items: center;
  gap: 12px;
}

.card .buttons button {
  padding: 6px;
  border-radius: var(--icon-size);
  cursor: pointer;
}

.card .buttons button:hover {
  background-color: var(--bg-color);
}

.card > *:last-child {
  padding-right: 28px;
}

/* Dialog */

body > .container {
  position: relative;
}

.dialog {
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 100;
  top: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.4);
  padding: 32px;
}

.dialog > .wrapper {
  position: relative;
  background-color: var(--main-color);
  width: 600px;
  padding: 36px 32px;
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  gap: 28px;
}

.dialog .title {
  font-size: 1.4rem;
}

.dialog button.close {
  position: absolute;
  top: 20px;
  right: 28px;
  background-color: transparent;
  border: none;
  width: 32px;
  height: 32px;
  border-radius: 32px;
  font-size: 18px;
  cursor: pointer;
}

.dialog button.close:hover {
  background-color: var(--bg-color);
}

.dialog .fields {
  display: grid;
  gap: 18px;
  color: var(--dialog-font-color);
}

.dialog li {
  display: grid;
  grid-template-columns: 68px 1fr;
  align-items: center;
  grid-template-areas: 
    "label input"
    ".     required";
}

.dialog p.required {
  display: none;
  grid-area: required;
  margin-top: 4px;
  font-size: 0.8rem;
  color: var(--required-text-color);
}


.dialog input[type="text"].required,
.dialog input[type="number"].required {
  border: 1px solid var(--required-text-color);
}

.dialog input[type="text"].required:focus,
.dialog input[type="number"].required:focus {
  border: 1px solid var(--required-text-color);
}

.dialog input[type="text"],
.dialog input[type="number"] {
  height: 36px;
  padding: 0 10px;
  outline: none;
  border: 1px solid var(--bg-color);
  border-radius: 4px;
  font-size: 1rem;
  color: var(--dialog-font-color);
}

.dialog input[type="text"]:focus,
.dialog input[type="number"]:focus {
  border-color: var(--dialog-font-color);
}

.lib-button-reverse {
  background-color: var(--primary-color);
  border: none;
  padding: 12px 36px;
  border-radius: 4px;
  font-weight: 600;
  font-size: 0.9rem;
  color: var(--main-color);
  text-transform: uppercase;
  cursor: pointer;
}

.lib-button-reverse:hover {
  background-color: var(--primary-color-hover);
}

.dialog button.submit {
  align-self: flex-end;
}

.lib-switch {
  position: relative;
  appearance: none;
  width: 52px;
  height: 28px;
  background-color: var(--switch-bg-color);
  border-radius: 22px;
  cursor: pointer;
}

.lib-switch::before {
  position: absolute;
  content: "";
  top: 3px;
  left: 4px;
  height: 22px;
  width: 22px;
  border-radius: 18px;
  background-color: var(--main-color);
}

.lib-switch:checked {
  background-color: var(--on-bg-color);
}

.lib-switch:checked::before {
  left: auto;
  right: 4px;
}

